@@ -73,6 +73,8 @@ function junit() {
     # Remove the timeout so Robolectric doesn't get killed while debugging
     local debug_timeout="0"
   fi
+  # For --add-opens jdk.internal.util.random see b/238100560.
+  # For --add-opens java.io see b/251387255.
   local command=(
     "${PRIVATE_ROBOLECTRIC_SCRIPT_PATH}/java-timeout"
     "${debug_timeout:-${PRIVATE_TIMEOUT}}"
@@ -80,7 +82,14 @@ function junit() {
     -Drobolectric.dependency.dir="${PRIVATE_ROBOLECTRIC_PATH}"
     -Drobolectric.offline=true
     -Drobolectric.logging=stdout
+    -Drobolectric.usePreinstrumentedJars=false
+    -Drobolectric.conscryptMode=OFF
+    -Drobolectric.logging.enabled=true
     -cp "$classpath"
+    --add-opens=java.base/java.lang=ALL-UNNAMED
+    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+    --add-opens=java.base/jdk.internal.util.random=ALL-UNNAMED
+    --add-opens=java.base/java.io=ALL-UNNAMED
     com.android.junitxml.JUnitXmlRunner
   )
   echo "${command[@]}" "$@"
